zefin-loan-gateway/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    konghq.com/plugins: prometheus
  name: zefin-loan-gateway
  namespace: zefin
spec:
  tls:
  - secretName: zefin-loan-gateway-tls
    hosts:
    - zefin-staging.zebrands.mx
  rules:
    - host: zefin-staging.zebrands.mx
      http:
        paths:
        - path: /v1/catalogs/
          pathType: Prefix
          backend:
            service:
              name: zefin-loan-gateway
              port:
                number: 80  
        - path: /v1/applicants/
          pathType: Prefix
          backend:
            service:
              name: zefin-loan-gateway
              port:
                number: 80 
        - path: /v1/applications/
          pathType: Prefix
          backend:
            service:
              name: zefin-loan-gateway
              port:
                number: 80
        - path: /v1/persons/
          pathType: Prefix
          backend:
            service:
              name: zefin-loan-gateway
              port:
                number: 80
